# einstein

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  config.h  descr.cpp  font.cpp  font.h  formatter.cpp  game.cpp  game.h  horhints.cpp  horhints.h  i18n.cpp  i18n.h  iconset.cpp  iconset.h  main.cpp  menu.cpp  opensave.cpp  opensave.h  options.cpp  options.h  puzgen.h  puzzle.cpp  puzzle.h  random.cpp  random.h  resources.cpp  rules.cpp  rules.h  screen.cpp  screen.h  topscores.cpp  topscores.h  utils.c  utils.cpp  utils.h  verthints.cpp  (+3 more)
.github/workflows/: ci_linux.yml  ci_macos.yml  clippy.yml  coverage.yml
einstein/: Cargo.toml
einstein-puzzle/: Cargo.toml
einstein-puzzle/src/: bitset.rs  lib.rs  puzzle.rs  puzzle_gen.rs  rules.rs  u4.rs
einstein-puzzle/src/util/: converge.rs  mod.rs  num_to_str.rs  retry.rs
einstein-visuals/: Cargo.toml
einstein-visuals/src/: palette.rs
einstein/src/: audio.rs  cell.rs  converge.rs  error.rs  locale.rs  main.rs  puzzle_gen.rs  rules.rs  storage.rs
einstein/src/resources/: manager.rs  mod.rs
einstein/src/resources/audio/: mod.rs
einstein/src/resources/background/: mod.rs
einstein/src/resources/messages/: messages_de.rs  messages_en.rs  mod.rs
einstein/src/resources/rules/: mod.rs  rules_de.rs  rules_en.rs  rules_ru.rs
einstein/src/resources/thing/: mod.rs
einstein/src/ui/: brick.rs  common.rs  context.rs  mod.rs  page_layout.rs
einstein/src/ui/component/: about_dialog.rs  failure_dialog.rs  game_name_dialog.rs  help_dialog.rs  load_dialog.rs  message_dialog.rs  mod.rs  options_dialog.rs  pause_dialog.rs  player_name_dialog.rs  rules_grid.rs  save_dialog.rs  topscores_dialog.rs
einstein/src/ui/component/dialog/: button.rs  checkbox.rs  mod.rs  slider.rs  theme.rs
einstein/src/ui/component/game/: mod.rs
einstein/src/ui/component/game_button/: mod.rs
einstein/src/ui/component/game_title/: mod.rs
einstein/src/ui/component/menu/: mod.rs
einstein/src/ui/component/puzzle/: mod.rs  puzzle.rs  puzzle_cell.rs
einstein/src/ui/component/rule/: mod.rs
einstein/src/ui/layout/: grid.rs
einstein/src/ui/widget/: any_key.rs  button.rs  checkbox.rs  common.rs  conditional.rs  container.rs  input_field.rs  label.rs  menu_button.rs  mod.rs  page_view.rs  slider.rs  widget.rs
einstein/src/util/: group_by_weight.rs  mod.rs  retry.rs  time.rs
mkres/: compressor.cpp  main.cpp  unicode.cpp
res/: messages.txt  messages_ru.txt  resources.descr
src/: algebra.rs  audio.rs  converge.rs  iconset.rs  locale.rs  main.rs  puzzle_gen.rs  rules.rs  storage.rs  text_parser.rs
src/audio/: mod.rs
src/resources/: manager.rs  mod.rs
src/resources/background/: mod.rs
src/resources/fonts/: mod.rs
src/ui/: brick.rs  common.rs  context.rs  fonts.rs  main_loop.rs  mod.rs  page_layout.rs  rule.rs  utils.rs
src/util/: group_by_weight.rs  mod.rs  retry.rs  time.rs
(+73 files in other folders)
