[package]
name = "einstein"
version = "0.1.0"
authors = ["Andrey Kutejko <andy128k@gmail.com>"]

[dependencies]
libc = "*"
failure = "*"
itertools = "*"
sdl = { path = "../rust-sdl" }
sdl2 = "*"
sdl2_ttf = "0.25.1"
rand = "*"
serde = "*"
serde_derive = "*"
toml = "*"
regex = "*"
lazy_static = "*"

[build-dependencies]
cc = "*"
