[package]
name = "einstein"
version = "0.1.0"
authors = ["Andrey Kutejko <andy128k@gmail.com>"]

[dependencies]
libc = "*"
failure = "*"
itertools = "*"
sdl = { path = "../rust-sdl" }
sdl2 = { version = "*", default-features = false, features = ["ttf"] }
rand = "*"
serde = "*"
serde_derive = "*"
toml = "*"
regex = "*"
lazy_static = "*"
debug-cell = "0.1.0"

[build-dependencies]
cc = "*"
