[package]
name = "einstein"
version = "3.0.0"
authors = ["Andrey Kutejko <andy128k@gmail.com>"]

[dependencies]
libc = "*"
failure = "*"
itertools = "*"
sdl = { path = "../rust-sdl" }
sdl2 = { version = "*", default-features = false, features = ["ttf"] }
rand = "*"
serde = "*"
serde_derive = "*"
serde_json = "1.0.11"
regex = "*"
lazy_static = "*"
debug-cell = "0.1.0"

[build-dependencies]
cc = "*"
