[package]
name = "einstein"
version = "3.0.0"
authors = ["Andrey Kutejko <andy128k@gmail.com>"]
edition = "2018"

[dependencies]
libc = "*"
failure = "*"
itertools = "*"
sdl2 = { version = "*", default-features = false, features = ["ttf", "mixer"] }
rand = "*"
serde = "*"
serde_derive = "*"
serde_json = "1.0.11"
regex = "*"
lazy_static = "*"
debug-cell = "0.1.0"
dirs = "2"
ropey = "1.0.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnls"] }
