[package]
name = "einstein"
version = "3.0.0"
authors = ["Andrey Kutejko <andy128k@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
anyhow = "1"
itertools = "0.9"
sdl2 = { version = "*", default-features = false, features = ["ttf", "mixer"] }
rand = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
lazy_static = "1"
debug-cell = "0.1.0"
dirs = "2"
ropey = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnls"] }
